--- a/test/src/arcelik-test-scss/Components/Header.scss
+++ b/test/src/arcelik-test-scss/Components/Header.scss
@@ -249,6 +249,105 @@
                     }
                 }
             }
+            /* HEADER MENU TYPE 2 [EMS0004294831915]*/
+            .type-1 {
+                display: none;
+            }
+            .type-2{
+                .lvl1{
+                    >li{
+                        ul{ padding-bottom: 0 !important; }
+                        .op-menu{
+                            padding-top: 20px;
+                            padding-bottom: 115px;
+                            > ul{
+                                width: calc(100% - 355px);
+                                margin-left: 15px;
+                                display: flex;
+                                flex-direction: column;
+                                align-content: flex-start;
+                                justify-content: flex-start;
+                                flex-wrap: wrap;
+                                position: relative;
+                                > li{
+                                    width: 33.3%;
+                                    margin-bottom: 5px;
+                                    margin-top: 5px;
+                                    padding-left: 15px;
+                                    > a{
+                                        font-weight: 700;
+                                    }
+                                    ul{
+                                        padding-bottom: 0 !important;
+                                    }
+                                    &.cat-link{
+                                        bottom:-90px !important;
+                                        width: 100%;
+                                        display: inline-block;
+                                        a{
+                                        display:block;
+                                        padding: 15px 0;
+                                        text-align: center;
+                                        border: 1px solid #ebebeb;
+                                        }
+                                    }
+                                }
+                                &:before{
+                                    content: " ";
+                                    display: inline-block;
+                                    width: 1px;
+                                    height: 100%;
+                                    position: absolute;
+                                    z-index: 1;
+                                    top: 0;
+                                    left: 33.3%;
+                                    background: #ebebeb;
+                                }
+                                &:after{
+                                    content: " ";
+                                    display: inline-block;
+                                    width: 1px;
+                                    height: 100%;
+                                    position: absolute;
+                                    z-index: 1;
+                                    top: 0;
+                                    left: 66.6%;
+                                    background: #ebebeb;
+                                }
+                                .cat-link{
+                                    display: none;
+                                }
+                                
+                            }
+                        }
+                        &.cat-1{
+                            .op-menu{
+                                height: 440px !important;
+                            }
+                        }
+                        &.cat-2{
+                            .op-menu{
+                                height: 380px !important;
+                            }
+                        }
+                        &.cat-3{
+                            .op-menu{
+                                height: 460px !important;
+                            }
+                        }
+                        &.cat-4{
+                            .op-menu{
+                                height: 320px !important;
+                            }
+                        }
+                        &.cat-5{
+                            .op-menu{
+                                height: 625px !important;
+                            }
+                        }
+                    }
+                }
+            }
         }
         #validateLogin {
             display: inline-block;
@@ -547,6 +646,8 @@
                     }
                 }
                 .header-menu-inner{
+                    &.type-1 { display: block; }
+                    &.type-2 { display: none; }
                     position: relative;
                     width: 100%;
                     height: 100%;
