--- a/test/src/arcelik-test-scss/style.css
+++ b/test/src/arcelik-test-scss/style.css
@@ -4768,7 +4768,8 @@ body .ui-datepicker table {
     font-size: 32px;
     padding: 7.5px 20px; }
   .site-header-inner .header-mobile-menu {
-    float: left; }
+    float: left;
+    /* HEADER MENU TYPE 2 [EMS0004294831915]*/ }
     .site-header-inner .header-mobile-menu .header-menu-inner > ul.lvl1 {
       padding-left: 12.5px; }
       .site-header-inner .header-mobile-menu .header-menu-inner > ul.lvl1 > li > a {
@@ -4898,6 +4899,86 @@ body .ui-datepicker table {
               margin-right: 0; }
               .site-header-inner .header-mobile-menu .header-menu-inner > ul.lvl1 > li .cat-obj-holder .cat-brands .lvl1 li:last-child a:after {
                 content: ""; }
+    .site-header-inner .header-mobile-menu .type-1 {
+      display: none; }
+    .site-header-inner .header-mobile-menu .type-2 .lvl1 > li ul {
+      padding-bottom: 0 !important; }
+    .site-header-inner .header-mobile-menu .type-2 .lvl1 > li .op-menu {
+      padding-top: 20px;
+      padding-bottom: 115px; }
+      .site-header-inner .header-mobile-menu .type-2 .lvl1 > li .op-menu > ul {
+        width: calc(100% - 355px);
+        margin-left: 15px;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-align-content: flex-start;
+        -ms-flex-line-pack: start;
+        align-content: flex-start;
+        -webkit-box-pack: start;
+        -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+        -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        position: relative; }
+        .site-header-inner .header-mobile-menu .type-2 .lvl1 > li .op-menu > ul > li {
+          width: 33.3%;
+          margin-bottom: 5px;
+          margin-top: 5px;
+          padding-left: 15px; }
+          .site-header-inner .header-mobile-menu .type-2 .lvl1 > li .op-menu > ul > li > a {
+            font-weight: 700; }
+          .site-header-inner .header-mobile-menu .type-2 .lvl1 > li .op-menu > ul > li ul {
+            padding-bottom: 0 !important; }
+          .site-header-inner .header-mobile-menu .type-2 .lvl1 > li .op-menu > ul > li.cat-link {
+            bottom: -90px !important;
+            width: 100%;
+            display: inline-block; }
+            .site-header-inner .header-mobile-menu .type-2 .lvl1 > li .op-menu > ul > li.cat-link a {
+              display: block;
+              padding: 15px 0;
+              text-align: center;
+              border: 1px solid #ebebeb; }
+        .site-header-inner .header-mobile-menu .type-2 .lvl1 > li .op-menu > ul:before {
+          content: " ";
+          display: inline-block;
+          width: 1px;
+          height: 100%;
+          position: absolute;
+          z-index: 1;
+          top: 0;
+          left: 33.3%;
+          background: #ebebeb; }
+        .site-header-inner .header-mobile-menu .type-2 .lvl1 > li .op-menu > ul:after {
+          content: " ";
+          display: inline-block;
+          width: 1px;
+          height: 100%;
+          position: absolute;
+          z-index: 1;
+          top: 0;
+          left: 66.6%;
+          background: #ebebeb; }
+        .site-header-inner .header-mobile-menu .type-2 .lvl1 > li .op-menu > ul .cat-link {
+          display: none; }
+    .site-header-inner .header-mobile-menu .type-2 .lvl1 > li.cat-1 .op-menu {
+      height: 440px !important; }
+    .site-header-inner .header-mobile-menu .type-2 .lvl1 > li.cat-2 .op-menu {
+      height: 380px !important; }
+    .site-header-inner .header-mobile-menu .type-2 .lvl1 > li.cat-3 .op-menu {
+      height: 460px !important; }
+    .site-header-inner .header-mobile-menu .type-2 .lvl1 > li.cat-4 .op-menu {
+      height: 320px !important; }
+    .site-header-inner .header-mobile-menu .type-2 .lvl1 > li.cat-5 .op-menu {
+      height: 625px !important; }
   .site-header-inner #validateLogin {
     display: inline-block;
     vertical-align: top;
@@ -5135,6 +5216,10 @@ body .ui-datepicker table {
       width: 100%;
       height: 100%;
       overflow: auto; }
+      .site-header-inner .header-mobile-menu .header-menu-inner.type-1 {
+        display: block; }
+      .site-header-inner .header-mobile-menu .header-menu-inner.type-2 {
+        display: none; }
       .site-header-inner .header-mobile-menu .header-menu-inner .back-btn {
         position: relative;
         display: inline-block;
@@ -15924,5 +16009,3 @@ html.ms-ready [id$="divCaptcha"] #imgCaptcha {
   left: 2px;
   top: 25px;
   height: 36px; }
-
-/*# sourceMappingURL=style.css.map */
