--- a/test/src/arcelik-test-scss/Components/Product-List.scss
+++ b/test/src/arcelik-test-scss/Components/Product-List.scss
@@ -71,7 +71,7 @@ $row-5-outer: 20px;
         font-family: $fontSite;
         text-decoration: underline;
     }
-    
+
     //detay navigasyon
     .ems-page-product-detail & {
         background: #f6f6f6;
@@ -370,7 +370,7 @@ $row-5-outer: 20px;
                     .urunKiyaslamaOzellik {
                         padding: 10px 15px;
                         border: 1px solid #ebebeb;
-                        border-radius: 15px;       
+                        border-radius: 15px;
                         font-size: 12px;
                         color: #999;
                         background: #fff;
@@ -386,7 +386,7 @@ $row-5-outer: 20px;
                             font-weight: normal;
                             background: #666;
                             color: #fff;
-                        }           
+                        }
                     }
                 }
             }
@@ -394,7 +394,7 @@ $row-5-outer: 20px;
     }
     .ayiracOzellikGrup {
         border-bottom: 1px solid #ebebeb;
-    }   
+    }
     .kutuHeaderOzellikFiltre, .ayiracOzellik, .urunKiyaslamaOzellik_temizle {
         display: none;
     }
@@ -422,6 +422,7 @@ $row-5-outer: 20px;
             max-width: 250px;
             * {transition: all 0.32s ease;}
             a {text-decoration: none;}
+            a > .features {line-height: 1.5;}
             .ems-prd-inner {
                 position: relative;
                 border: 1px solid #ebebeb;
@@ -444,10 +445,11 @@ $row-5-outer: 20px;
                     }
                 }
                 .prd-fields-1 {
-                    height: 108px;
+                    max-height: 108px;
+                    min-height: 87px;
                 }
                 .ems-prd-name {
-                    margin-top: 10px;
+                    margin-top: 15px;
                     font-size: 13px;
                     font-weight: 700;
                     line-height: 1.2;
@@ -457,14 +459,14 @@ $row-5-outer: 20px;
                 .ems-prd-rating {
                     margin-top: 7px;
                     height: 15px;
-                } 
+                }
                 .ems-prd-description {
                     margin-top: 12px;
                     font-family: $fontDefault;
                     font-size: $fontSizeDefault;
                     color: #333;
                     line-height: 1.3;
-                    height: 60px;
+                    height: 75px;
                     overflow: hidden;
                     ul.features {
                         li {
@@ -486,7 +488,8 @@ $row-5-outer: 20px;
                     }
                 }
                 .urunListe_ParoAciklama {
-                    margin-top: 20px;
+                    /*margin-top: 20px;*/
+                    margin-top: 10px;
                     height: 22px;
                 }
                 .ems-prd-price {
@@ -513,7 +516,7 @@ $row-5-outer: 20px;
                     &-selling {
                         margin-top: 15px;
                         font-size: 23px;
-                        font-weight: 500;
+                        font-weight: 700;
                     }
                 }
                 .ems-prd-compare {
@@ -531,7 +534,7 @@ $row-5-outer: 20px;
                         }
                 }
                 .ems-prd-btn-detail {
-                    margin-top: 7px;
+                    margin-top: 9px;
                     a {
                         display: block;
                         text-align: center;
@@ -608,7 +611,7 @@ $row-5-outer: 20px;
         right: 8px;
         top: -8px;
         max-width: 43px;
-    }    
+    }
 }
 .ems-prd-detail .plhParoAciklama-clone {
     .paroKampanyaAd {
@@ -629,9 +632,11 @@ $row-5-outer: 20px;
         > b {
             font-family: arial;
             font-size: 9px;
-            color: #9d6948;
+            /*color: #9d6948;*/
+            color: #333333;
             font-weight: 700;
-            letter-spacing: 2px;
+            /*letter-spacing: 2px;*/
+            letter-spacing: 1.1px;
         }
     }
     .paro-icon1 {
@@ -832,7 +837,7 @@ $row-5-outer: 20px;
                 max-width: 70%;
                 > .ems-inline {
                     .ems-prd {
-                        max-width: (100% / 3); 
+                        max-width: (100% / 3);
                         .ems-prd-inner {
                             max-width: 175px;
                             background: #fff;
@@ -1026,7 +1031,7 @@ $row-5-outer: 20px;
                                 color: #fff;
                                 text-align: center;
                                 font-size: 12px;
-                                transition: background .32s ease; 
+                                transition: background .32s ease;
                             }
                         }
                         .urunKiyaslamaUrun_urnAd {
@@ -1274,7 +1279,7 @@ $row-5-outer: 20px;
     .ems-page-product-list .ems-prd-list > .ems-inline {
         margin: 10px;
     }
-} 
+}
 @media screen and (max-width: $tablet-p) {
     $row-5-outer-tablet: 0;
     .ems-page-product-list {
@@ -1353,7 +1358,7 @@ $row-5-outer: 20px;
                             &:after {
                                 display: none;
                             }
-                        }                    
+                        }
                     }
                     &.more {
                         > a.title {
@@ -1504,7 +1509,7 @@ $row-5-outer: 20px;
             margin-bottom: 8px;
             line-height: 1.2;
         }
-    }   
+    }
 
     //karşılaştırma
     .compareHolder {
@@ -1633,13 +1638,17 @@ $row-5-outer: 20px;
             }
         }
     }
-    
+
     //liste
     .ems-prd-list-count {
         margin: 5px 20px 20px;
     }
-    
+
     .ems-prd-list {
+        .paroKampanyaAd .paro-icon1{
+            max-width: 70px;
+            top: 141px;
+        }
         > .ems-inline {
             .ems-prd {
                 max-width: (100%);
@@ -1658,7 +1667,7 @@ $row-5-outer: 20px;
                     }
                     .ems-prd-description {
                         font-size: 13px;
-                        height: 64px;
+                        height: 72px;
                     }
                     .ems-prd-price-selling {
                         font-size: 25px;
@@ -1667,7 +1676,7 @@ $row-5-outer: 20px;
                     }
                     .ems-prd-price-first {
                         font-size: 18px;
-                    }                    
+                    }
                     .ems-prd-btn-detail {
                         margin-top: 15px;
                         a {
@@ -1772,7 +1781,7 @@ $row-5-outer: 20px;
             .nav {
                 display:inline-block !important;
                 width: 100%;
-                padding: 10px 0; 
+                padding: 10px 0;
                 a.nextBtn {
                     float:right;
                     position: absolute;
@@ -1819,13 +1828,13 @@ $row-5-outer: 20px;
             display: block !important;
             position: absolute;
             right: 22px;
-            top: calc(50% - 8px); 
+            top: calc(50% - 8px);
             span {
                 color: #FFFFFF;
             }
         }
     }
-} 
+}
 
 @media screen and (max-width: $mobile-m){
     //liste
