--- a/test/src/arcelik-test-scss/Components/Mrt.scss
+++ b/test/src/arcelik-test-scss/Components/Mrt.scss
@@ -49,7 +49,7 @@
                                         font-size: 18px;
                                     }
                             }
-                    }                    
+                    }
             }
             .campaigns-tab {
                 margin: 0px auto 85px;
@@ -266,6 +266,12 @@
                     @extend .ems-container;
                         .bx-controls-direction{
                             z-index: 2 !important;
+                            a.bx-prev{
+                                left: 0;
+                            }
+                            a.bx-next{
+                                right: 0;
+                            }
                         }
                 }
                 .page-top-title{
@@ -331,7 +337,7 @@
                             margin-bottom: 25px;
                         }
                 }
-                
+
         }
         @media screen and (max-width:$mobile-l){
             min-height: 100vh;
@@ -400,7 +406,7 @@
                     display: block;
                 }
             }
-            
+
             .left-colm {
                 float: left;
                 width: 288px;
@@ -413,7 +419,7 @@
                         border-bottom: 1px solid #ebebeb;
                             .title{
                                 margin: 0 0 20px 0;
-                                font-size: 12px; 
+                                font-size: 12px;
                                 font-weight: 700;
                             }
                             .list{
@@ -454,7 +460,7 @@
     }
     100% {
         transform: rotate(360deg);
-    } 
+    }
 }
 .view-360-btn {
     display: inline-block;
@@ -525,7 +531,7 @@
                             animation: loader-rotate 1s linear infinite;
                             top: 0;
                         }
-                    
+
                 }
         }
         .nav_bar{
@@ -816,7 +822,7 @@
             .lvl1 {
                 max-width: none;
                 &.content-js{
-                    padding: 0 20px;    
+                    padding: 0 20px;
                 }
                 &.navigation-js > li{
                     vertical-align: bottom;
