--- a/test/src/arcelik-test-scss/Components/Product-List.scss
+++ b/test/src/arcelik-test-scss/Components/Product-List.scss
@@ -466,7 +466,7 @@ $row-5-outer: 20px;
                     font-size: $fontSizeDefault;
                     color: #333;
                     line-height: 1.3;
-                    height: 75px;
+                    height: 74px;
                     overflow: hidden;
                     ul.features {
                         li {
@@ -630,13 +630,18 @@ $row-5-outer: 20px;
             display: none;
         }
         > b {
-            font-family: arial;
-            font-size: 9px;
+            font-family: $fontDefault;
+            font-size: 11px;
             /*color: #9d6948;*/
             color: #333333;
             font-weight: 700;
             /*letter-spacing: 2px;*/
-            letter-spacing: 1.1px;
+            letter-spacing: .6px;
+            > .paroFiyat{
+                color: #ed1c24;
+                font-family: $fontSite2;
+                font-weight: 500;
+            }
         }
     }
     .paro-icon1 {
