--- a/test/src/arcelik-test-scss/style.css
+++ b/test/src/arcelik-test-scss/style.css
@@ -8212,7 +8212,7 @@ body .ui-datepicker table {
         font-size: 12px;
         color: #333;
         line-height: 1.3;
-        height: 75px;
+        height: 74px;
         overflow: hidden; }
         .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description ul.features li .text {
           color: #999; }
@@ -8333,13 +8333,17 @@ body .ui-datepicker table {
   .ems-prd-list .paroKampanyaAd .desc > small {
     display: none; }
   .ems-prd-list .paroKampanyaAd .desc > b {
-    font-family: arial;
-    font-size: 9px;
+    font-family: "arial";
+    font-size: 11px;
     /*color: #9d6948;*/
     color: #333333;
     font-weight: 700;
     /*letter-spacing: 2px;*/
-    letter-spacing: 1.1px; }
+    letter-spacing: .6px; }
+    .ems-prd-list .paroKampanyaAd .desc > b > .paroFiyat {
+      color: #ed1c24;
+      font-family: "Gotham";
+      font-weight: 500; }
   .ems-prd-list .paroKampanyaAd .paro-icon1 {
     max-width: 50px;
     position: absolute;
@@ -15483,6 +15487,10 @@ a.contact724 {
       margin-bottom: 60px; }
       .campaign-wrapper .campaign-products-wrapper .campaign-product-slider .bx-controls-direction {
         z-index: 2 !important; }
+        .campaign-wrapper .campaign-products-wrapper .campaign-product-slider .bx-controls-direction a.bx-prev {
+          left: 0; }
+        .campaign-wrapper .campaign-products-wrapper .campaign-product-slider .bx-controls-direction a.bx-next {
+          right: 0; }
     .campaign-wrapper .campaign-products-wrapper .page-top-title, .campaign-wrapper .campaign-products-wrapper .guestCheckout .pageHeaderGuestCheckout, .guestCheckout .campaign-wrapper .campaign-products-wrapper .pageHeaderGuestCheckout {
       margin: 0 0 20px 0;
       font-size: 44px;
