--- a/test/src/arcelik-test-scss/Components/Product-List.scss
+++ b/test/src/arcelik-test-scss/Components/Product-List.scss
@@ -638,7 +638,7 @@ $row-5-outer: 20px;
             /*letter-spacing: 2px;*/
             letter-spacing: .6px;
             > .paroFiyat{
-                color: #ed1c24;
+                /*color: #ed1c24;*/
                 font-family: $fontSite2;
                 font-weight: 500;
             }
