EMS0004293231650_1 - içerik geri bildirim (yararlı oldu mu?)

--- a/test/src/arcelik-test-scss/Base/Variables.scss
+++ b/test/src/arcelik-test-scss/Base/Variables.scss
@@ -1,8 +1,8 @@
 // General Definations
-//test $baseHref: '//epm.test.arcelik.com';
+//test 
+$baseHref: '//epm.test.arcelik.com';
 //canlı cdn $baseHref: '//img-arcelik.mncdn.com';
-//canlı
-$baseHref: '';
+//canlı $baseHref: '';
 
 // Typography
 $fontDefault: "arial";
